force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Health_Care_Quote_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Quote_Line_ID__c</fullName>
    <label>Health Care Quote Line ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>