force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Healthcare_Quote_Staging__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Quote_Staging__c</fullName>
    <label>Healthcare Quote Staging</label>
    <referenceTo>Healthcare_Quote_Staging__c</referenceTo>
    <relationshipLabel>Healthcare QuoteDetail Staging</relationshipLabel>
    <relationshipName>Healthcare_QuoteDetail_Staging</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>