force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <label>Pricebook Entry ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>