force-app/main/default/objects/Healthcare_QuoteDetail_Staging__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quote ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>